@@ -41,12 +41,9 @@ let set tbl name crc source = Hashtbl.add tbl name (crc, source)
 let source tbl name = snd (Hashtbl.find tbl name)
 
 let extract l tbl =
+  let l = List.sort_uniq String.compare l in
   List.fold_left
     (fun assc name ->
-     try
-       ignore (List.assoc name assc);
-       assc
-     with Not_found ->
        try
          let (crc, _) = Hashtbl.find tbl name in
            (name, Some crc) :: assc
